# middleware-demo

./: .gitignore  .gitmodules  .vsts-ci.yml  DemoApplications.sln  LICENSE  README.md  csConsoleApplicationSCU.sln  csConsoleApplicationSCU_AT.sln  csConsoleApplicationSOAP_FR.sln  version.txt
.github/: CODEOWNERS
C-sharp/demo/: ExecuteConfigurationTemplate.sln  README.md  csConsoleApplicationJournalREST.sln  csConsoleApplicationJournalSOAP.sln  csConsoleApplicationREST_AT.sln  csConsoleApplicationREST_FR.sln  csConsoleApplicationSOAP_AT.sln
C-sharp/demo/doc/: README.md
C/REST/Echo/: .gitignore  Makefile  Makefile.in  README.md  configure.ps1
C/REST/Journal/: Makefile  Makefile.in  README.md  cJSON  configure.ps1
C/REST/Sign/: .gitignore  Makefile  Makefile.in  (+2 more)
Excel/at/: System.Net.Http.xml  TestKassaCOMInterop.xlsm  fiskaltrust.ifPOS.net40.xml  register.cmd
VB6/SOAP/: README.md
c-sharp/: DemoApplications.sln  csConsoleApplicationSOAP_DE.sln  csConsoleApplicationSOAPv1_DE.sln
c-sharp/doc/: README.md
doc/: README.md
doc/at/: README.md  csConsoleApplicationREST_AT.md  csConsoleApplicationSCU_AT.md  csConsoleApplicationSOAP_AT.md
doc/common/: ExecuteConfigurationTemplate.md  README.md  csConsoleApplicationJournalREST.md  csConsoleApplicationJournalSOAP.md
doc/fr/: README.md  csConsoleApplicationREST_FR.md  csConsoleApplicationSOAP_FR.md
rust/common/rustConsoleApplicationREST/: Cargo.toml
rust/common/rustConsoleApplicationREST/src/: main.rs
src/: README.md
src/at/: README.md
src/common/: README.md
src/fr/: README.md
test/: README.md
(+210 files in other folders)
