[package]
name = "rust_console_application_rest"
version = "0.2.0"
authors = ["Paul Volavsek <paul.volavsek@fiskaltrust.at>"]
edition = "2018"

[dependencies]
restson = "^0.5.3"
chrono = { version = "^0.4.6", features = ["serde"] }
rust_decimal = "^1.0.1"
rust_decimal_macros = "^1.0.1"
serde = { version = "^1.0", features = ["derive"] }
read_input = "^0.8.1"
url = "^1.7.2"
qrcode = "^0.10.0"
